[project]
name = "those-people-dont-exist"
version = "0.1.0"
description = "A demo project where generator based event loop is integrated into a UI framework"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "wxpython (>=4.2.5,<5.0.0)",
    "h2 (>=4.3.0,<5.0.0)",
    "certifi (>=2026.4.22,<2027.0.0)"
]

[tool.poetry.scripts]
start = "those_people_dont_exist.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
